; ModuleID = '/home/carl/AnghaBench/radare2/shlr/grub/fs/extr_nilfs2.c_grub_nilfs2_direct_lookup.c'
source_filename = "/home/carl/AnghaBench/radare2/shlr/grub/fs/extr_nilfs2.c_grub_nilfs2_direct_lookup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.grub_nilfs2_inode = type { i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.grub_nilfs2_inode*, i32)* @grub_nilfs2_direct_lookup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @grub_nilfs2_direct_lookup(%struct.grub_nilfs2_inode* %0, i32 %1) #0 {
  %3 = alloca %struct.grub_nilfs2_inode*, align 8
  %4 = alloca i32, align 4
  store %struct.grub_nilfs2_inode* %0, %struct.grub_nilfs2_inode** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.grub_nilfs2_inode*, %struct.grub_nilfs2_inode** %3, align 8
  %6 = getelementptr inbounds %struct.grub_nilfs2_inode, %struct.grub_nilfs2_inode* %5, i32 0, i32 0
  %7 = load i32*, i32** %6, align 8
  %8 = load i32, i32* %4, align 4
  %9 = add nsw i32 1, %8
  %10 = sext i32 %9 to i64
  %11 = getelementptr inbounds i32, i32* %7, i64 %10
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @grub_le_to_cpu64(i32 %12)
  ret i32 %13
}

declare dso_local i32 @grub_le_to_cpu64(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
